# tt-scripts

./: .clang-format  .gitignore  CMakeLists.txt  _.clang-tidy  scripts_VC2012.sln
AntiSpawnKill/: AntiSpawnKill.cpp  AntiSpawnKill.h  AntiSpawnKill.vcxproj  AntiSpawnKill.vcxproj.filters  General.h
BattleView/: BattleView.cpp  BattleView.h  BattleView.vcxproj  BattleView.vcxproj.filters  General.cpp  General.h
BattleView/include/: BattleView.h  BattleView_Entity.h  BattleView_HTTPClient.h  BattleView_JSONify.h
BattleView/src/: BattleView.cpp  BattleView_Entity.cpp  BattleView_HTTPClient.cpp  BattleView_JSONify.cpp
CTF/: CTF.cpp  General.h  ctf.vcxproj  ctf.vcxproj.filters
CharacterRefund/: CharacterRefund.cpp  CharacterRefund.h  CharacterRefund.vcxproj  CharacterRefund.vcxproj.filters  General.h
ExtraConsoleCommands/: ExtraConsoleCommands.cpp  ExtraConsoleCommands.vcxproj  ExtraConsoleCommands.vcxproj.filters  General.h
FirstBlood/: FirstBlood.cpp  FirstBlood.h  FirstBlood.vcxproj  FirstBlood.vcxproj.filters  General.h
MemoryManager/: DList.h  FastAllocator.cpp  FastAllocator.h  FastCriticalSection.h  MemTracker.cpp  MemTracker.h  MemoryManager.h  MemoryManager.vcxproj  MemoryManager_debug.cpp  MemoryManager_release.cpp  TSList.h  dllmain_debug.cpp  dllmain_release.cpp  platform.h
MemoryManager/compiler_workarounds/: xdebug  xlocale
Mute/: General.h  Mute.cpp  Mute.vcxproj  Mute.vcxproj.filters
NoPoints/: General.h  NoPoints.cpp  NoPoints.h  NoPoints.vcxproj  NoPoints.vcxproj.filters
PointsDistribution/: DamagePoints.cpp  DamagePoints.h  General.h  PointsDistribution.cpp  PointsDistribution.h  PointsDistribution.vcxproj  PointsDistribution.vcxproj.filters
SuddenDeath/: General.h  SuddenDeath.cpp  SuddenDeath.h  SuddenDeath.vcxproj  SuddenDeath.vcxproj.filters
bansystem/: BanList.cpp  BanList.h  BanListStore.cpp  BanListStore.h  BanSystem.h  General.h  IpAddress.cpp  IpAddress.h  bansystem.cpp  bansystem.vcxproj  bansystem.vcxproj.filters
crates/: GDICRATE.txt  General.h  NODCRATE.txt  crates.cpp  crates.vcxproj  crates.vcxproj.filters
example-plugin/: ExamplePlugin.cpp  ExamplePlugin.h  General.h  example-plugin.vcxproj.filters
makemix/: CRC.cs  Program.cs  makemix.csproj
makemix/Properties/: AssemblyInfo.cs
randomstartingcredits/: General.h  RandomStartingCredits.cpp  RandomStartingCredits.vcxproj  RandomStartingCredits.vcxproj.filters
scripts/: AABTreeCull.h  AABoxClass.h  AAPlaneClass.h  AirFactoryGameObj.h  AirFactoryGameObjDef.h  AirStripGameObj.h  AirStripGameObjDef.h  AnimCollisionManagerClass.h  AnimControlClass.h  ArmedGameObj.h  ArmedGameObjDef.h  ArmorWarheadManager.h  AudibleSoundClass.h  AudibleSoundDefinitionClass.cpp  AudibleSoundDefinitionClass.h  AudioCallbackListClass.h  BaseControllerClass.h  BaseGameObj.h  BaseGameObjDef.h  BeaconGameObj.h  BeaconGameObjDef.h  BufferedFileClass.h  BuildingAggregateClass.h  BuildingAggregateDefClass.h  BuildingGameObj.h  BuildingGameObjDef.h  C4GameObj.h  C4GameObjDef.h  CastResultStruct.h  ChunkClass.h  ChunkClasses.cpp  CinematicGameObj.h  CinematicGameObjDef.h  ComCenterGameObj.h  ComCenterGameObjDef.h  CombatManager.h  CommandLineParser.cpp  CommandLineParser.h  ConnectionAcceptanceFilter.h  ConnectionRequest.h  (+403 more)
shared/: General.h  shared.cpp  shared.vcxproj
swap/: General.h  Swap.cpp  Swap.h  Swap.vcxproj  Swap.vcxproj.filters
tdbedit/: Search.cpp  Search.h  general.h  resource.h  tdbedit.cpp  tdbedit.h  tdbedit.rc  tdbedit.vcxproj  tdbedit.vcxproj.filters
teamspeak/: General.h  TCPclass.cpp  TCPclass.h  teamspeak.cpp  teamspeak.h  teamspeak.vcxproj  teamspeak.vcxproj.filters
