cmake_minimum_required(VERSION 3.21)
project(tt_scripts)

set(CMAKE_CXX_STANDARD 14)

include_directories(BattleView)
include_directories(MemoryManager)
include_directories(scripts)
include_directories(shared)

add_executable(tt_scripts
        BattleView/BattleView.cpp
        BattleView/BattleView.h
        BattleView/BattleView.vcxproj
        BattleView/General.cpp
        BattleView/General.h
        MemoryManager/compiler_workarounds/MemoryManager_VS2010_Workaround.props
        MemoryManager/compiler_workarounds/xdebug
        MemoryManager/compiler_workarounds/xlocale
        MemoryManager/DList.h
        MemoryManager/dllmain_debug.cpp
        MemoryManager/dllmain_release.cpp
        MemoryManager/FastAllocator.cpp
        MemoryManager/FastAllocator.h
        MemoryManager/FastCriticalSection.h
        MemoryManager/MemoryManager.h
        MemoryManager/MemoryManager.vcxproj
        MemoryManager/MemoryManager.vcxproj.filters
        MemoryManager/MemoryManager_debug.cpp
        MemoryManager/MemoryManager_release.cpp
        MemoryManager/MemoryManager_win32.def
        MemoryManager/MemoryManager_x64.def
        MemoryManager/MemTracker.cpp
        MemoryManager/MemTracker.h
        MemoryManager/platform.h
        MemoryManager/TSList.h
        scripts/AABoxClass.h
        scripts/AABTreeCull.h
        scripts/AAPlaneClass.h
        scripts/action.h
        scripts/agtfix.cpp
        scripts/agtfix.h
        scripts/AirFactoryGameObj.h
        scripts/AirFactoryGameObjDef.h
        scripts/AirStripGameObj.h
        scripts/AirStripGameObjDef.h
        scripts/AnimCollisionManagerClass.h
        scripts/AnimControlClass.h
        scripts/ArmedGameObj.h
        scripts/ArmedGameObjDef.h
        scripts/ArmorWarheadManager.h
        scripts/AudibleSoundClass.h
        scripts/AudibleSoundDefinitionClass.cpp
        scripts/AudibleSoundDefinitionClass.h
        scripts/audiocallback.h
        scripts/AudioCallbackListClass.h
        scripts/BaseControllerClass.h
        scripts/BaseGameObj.h
        scripts/BaseGameObjDef.h
        scripts/BeaconGameObj.h
        scripts/BeaconGameObjDef.h
        scripts/boxrenderobjclass.h
        scripts/BufferedFileClass.h
        scripts/BuildingAggregateClass.h
        scripts/BuildingAggregateDefClass.h
        scripts/BuildingGameObj.h
        scripts/BuildingGameObjDef.h
        scripts/C4GameObj.h
        scripts/C4GameObjDef.h
        scripts/cAMpaScripts.cpp
        scripts/cAMpaScripts.h
        scripts/CastResultStruct.h
        scripts/cGameType.cpp
        scripts/cGameType.h
        scripts/ChunkClass.h
        scripts/ChunkClasses.cpp
        scripts/CinematicGameObj.h
        scripts/CinematicGameObjDef.h
        scripts/cNetEvent.h
        scripts/coltest.cpp
        scripts/coltest.h
        scripts/coltype.h
        scripts/CombatManager.h
        scripts/ComCenterGameObj.h
        scripts/ComCenterGameObjDef.h
        scripts/CommandLineParser.cpp
        scripts/CommandLineParser.h
        scripts/ConnectionAcceptanceFilter.h
        scripts/ConnectionRequest.h
        scripts/ConstructionYardGameObj.h
        scripts/ConstructionYardGameObjDef.h
        scripts/ControlClass.h
        scripts/ConversationClass.h
        scripts/cPlayer.h
        scripts/cPlayerKill.h
        scripts/cPurchaseResponseEvent.h
        scripts/Crc32.cpp
        scripts/Crc32.h
        scripts/CriticalSectionClass.cpp
        scripts/CriticalSectionClass.h
        scripts/cScTextObj.h
        scripts/cTeam.h
        scripts/CullableClass.h
        scripts/CullSystemClass.h
        scripts/DamageableGameObj.h
        scripts/DamageableGameObjDef.h
        scripts/DamageZoneGameObj.h
        scripts/DamageZoneGameObjDef.h
        scripts/dan.cpp
        scripts/dan.h
        scripts/datasafe.cpp
        scripts/datasafe.h
        scripts/DB_General.h
        scripts/DB_Innate.cpp
        scripts/DB_Innate.h
        scripts/DB_Research_Terminals.cpp
        scripts/DB_Research_Terminals.h
        scripts/DBIKScripts.cpp
        scripts/DBIKScripts.h
        scripts/DBScripts.cpp
        scripts/DBVehicleBypass.cpp
        scripts/DecorationPhysClass.h
        scripts/DecorationPhysDefClass.h
        scripts/DefaultConnectionAcceptanceFilter.cpp
        scripts/DefaultConnectionAcceptanceFilter.h
        scripts/DefenseObjectClass.h
        scripts/DefenseObjectDefClass.h
        scripts/Defines.h
        scripts/definition.cpp
        scripts/Definition.h
        scripts/DefinitionFactoryClass.cpp
        scripts/DefinitionFactoryClass.h
        scripts/DefinitionFactoryMgrClass.cpp
        scripts/DefinitionFactoryMgrClass.h
        scripts/DefinitionMgrClass.cpp
        scripts/DefinitionMgrClass.h
        scripts/DialogueClass.h
        scripts/dllmain.cpp
        scripts/dp88_ar.cpp
        scripts/dp88_ar.h
        scripts/dp88_ar_unitScripts.cpp
        scripts/dp88_ar_unitScripts.h
        scripts/dp88_buildingScripts.cpp
        scripts/dp88_buildingScripts.h
        scripts/dp88_custom_timer_defines.h
        scripts/dp88_customAI.cpp
        scripts/dp88_customAI.h
        scripts/dp88_misc.cpp
        scripts/dp88_misc.h
        scripts/dp88_veterancy.cpp
        scripts/dp88_veterancy.h
        scripts/DynamicPhysClass.h
        scripts/DynamicPhysDefClass.h
        scripts/DynamicShadowManager.h
        scripts/Editable.h
        scripts/engine.h
        scripts/engine_common.cpp
        scripts/engine_common.h
        scripts/engine_def.cpp
        scripts/engine_def.h
        scripts/engine_dmg.cpp
        scripts/engine_dmg.h
        scripts/engine_game.cpp
        scripts/engine_game.h
        scripts/engine_io.cpp
        scripts/engine_io.h
        scripts/engine_math.cpp
        scripts/engine_math.h
        scripts/engine_obj.cpp
        scripts/engine_obj.h
        scripts/engine_obj2.cpp
        scripts/engine_obj2.h
        scripts/engine_phys.cpp
        scripts/engine_phys.h
        scripts/engine_player.cpp
        scripts/engine_player.h
        scripts/engine_pt.cpp
        scripts/engine_pt.h
        scripts/engine_script.cpp
        scripts/engine_script.h
        scripts/engine_string.cpp
        scripts/engine_string.h
        scripts/engine_tdb.cpp
        scripts/engine_tdb.h
        scripts/engine_threading.cpp
        scripts/engine_threading.h
        scripts/engine_tt.cpp
        scripts/engine_tt.h
        scripts/engine_ttdef.h
        scripts/engine_vector.h
        scripts/engine_weap.cpp
        scripts/engine_weap.h
        scripts/ExtendedNetworkObject.h
        scripts/FileFactoryListClass.cpp
        scripts/FileFactoryListClass.h
        scripts/FrustumClass.h
        scripts/GameData.h
        scripts/GameDefinition.h
        scripts/GameObjManager.h
        scripts/gap.cpp
        scripts/gap.h
        scripts/General.cpp
        scripts/General.h
        scripts/gmbuilding.cpp
        scripts/gmbuilding.h
        scripts/gmgame.cpp
        scripts/gmgame.h
        scripts/gmlog.cpp
        scripts/gmlog.h
        scripts/gmplugin.h
        scripts/gmsoldier.cpp
        scripts/gmsoldier.h
        scripts/gmvehicle.cpp
        scripts/gmvehicle.h
        scripts/GridCull.h
        scripts/HarvesterClass.h
        scripts/HashTemplateClass.h
        scripts/HashTemplateIterator.h
        scripts/HashTemplateKeyClass.cpp
        scripts/HashTemplateKeyClass.h
        scripts/HTreeClass.h
        scripts/HumanStateClass.h
        scripts/inttest.h
        scripts/iran_scripts.cpp
        scripts/iran_scripts.h
        scripts/Iterator.cpp
        scripts/Iterator.h
        scripts/jfwcine.cpp
        scripts/jfwcine.h
        scripts/jfwcust.cpp
        scripts/jfwcust.h
        scripts/jfwdef.cpp
        scripts/jfwdef.h
        scripts/jfwdmg.cpp
        scripts/jfwdmg.h
        scripts/jfwgame.cpp
        scripts/jfwgame.h
        scripts/jfwgun.cpp
        scripts/jfwgun.h
        scripts/jfwhook.cpp
        scripts/jfwhook.h
        scripts/jfwmisc.cpp
        scripts/jfwmisc.h
        scripts/jfwobj.cpp
        scripts/jfwobj.h
        scripts/jfwpoke.cpp
        scripts/jfwpoke.h
        scripts/jfwpow.cpp
        scripts/jfwpow.h
        scripts/jfwscr.cpp
        scripts/jfwscr.h
        scripts/jfwsnd.cpp
        scripts/jfwsnd.h
        scripts/jfwveh.cpp
        scripts/jfwveh.h
        scripts/jfwweap.cpp
        scripts/jfwweap.h
        scripts/jfwws.cpp
        scripts/jfwws.h
        scripts/jfwzone.cpp
        scripts/jfwzone.h
        scripts/jmgBearHunter.cpp
        scripts/jmgBearHunter.h
        scripts/JmgDeathMatch.cpp
        scripts/JmgDeathMatch.h
        scripts/jmgMetroid.cpp
        scripts/jmgMetroid.h
        scripts/JMGRenetBuster.h
        scripts/JMGRenetBusters.cpp
        scripts/jmgUtility.cpp
        scripts/jmgUtility.h
        scripts/kak.cpp
        scripts/kak.h
        scripts/kamuix.cpp
        scripts/kamuix.h
        scripts/LightPhysClass.h
        scripts/LineSegClass.cpp
        scripts/LineSegClass.h
        scripts/LoopedAnimationController.cpp
        scripts/LoopedAnimationController.h
        scripts/MaterialEffectClass.h
        scripts/Matrix3.cpp
        scripts/Matrix3.h
        scripts/Matrix3D.cpp
        scripts/Matrix3D.h
        scripts/matrix4.cpp
        scripts/matrix4.h
        scripts/mdb.cpp
        scripts/mdb.h
        scripts/mdbdef.cpp
        scripts/mdbdef.h
        scripts/mdbevf.cpp
        scripts/mdbevf.h
        scripts/MeshClass.h
        scripts/MixFileFactoryClass.cpp
        scripts/MixFileFactoryClass.h
        scripts/MoveablePhysClass.h
        scripts/MoveablePhysDefClass.h
        scripts/ms.cpp
        scripts/ms.h
        scripts/ms_ai.cpp
        scripts/multilist.cpp
        scripts/multilist.h
        scripts/MuzzleFlashClass.h
        scripts/MuzzleRecoilClass.h
        scripts/NavalFactoryGameObj.h
        scripts/NavalFactoryGameObjDef.h
        scripts/neo.cpp
        scripts/neo.h
        scripts/NetworkObjectClass.h
        scripts/nh.cpp
        scripts/nh.h
        scripts/nhp.cpp
        scripts/nhp.h
        scripts/obboxclass.h
        scripts/obelfix.cpp
        scripts/obelfix.h
        scripts/ObjectLibraryManager.cpp
        scripts/ObjectLibraryManager.h
        scripts/Observee.h
        scripts/ObserverImpClass.h
        scripts/OffenseObjectClass.h
        scripts/Parameter.h
        scripts/Persist.h
        scripts/PersistFactoryClass.cpp
        scripts/PersistFactoryClass.h
        scripts/PhysClass.h
        scripts/physcoltest.h
        scripts/PhysControllerClass.h
        scripts/PhysDefClass.h
        scripts/PhysicalGameObj.h
        scripts/PhysicalGameObjDef.h
        scripts/PhysicsSceneClass.h
        scripts/physinttest.h
        scripts/PhysObserverClass.h
        scripts/plane.h
        scripts/PlayerDataClass.h
        scripts/PointerRemapClass.cpp
        scripts/PointerRemapClass.h
        scripts/PostLoadableClass.h
        scripts/PowerPlantGameObj.h
        scripts/PowerPlantGameObjDef.h
        scripts/PowerupGameObj.h
        scripts/PowerupGameObjDef.h
        scripts/PresetMgr.cpp
        scripts/PresetMgr.h
        scripts/ProjectorManagerClass.h
        scripts/prototypeclass.h
        scripts/PurchaseSettingsDefClass.h
        scripts/Quaternion.cpp
        scripts/Quaternion.h
        scripts/ra2.cpp
        scripts/ra2.h
        scripts/ra_legacy.cpp
        scripts/ra_legacy.h
        scripts/Random2Class.cpp
        scripts/Random2Class.h
        scripts/Random3Class.cpp
        scripts/Random3Class.h
        scripts/RandomClass.cpp
        scripts/RandomClass.h
        scripts/RawFileClass.h
        scripts/reborn.cpp
        scripts/reborn.h
        scripts/rect.h
        scripts/ReferenceableClass.h
        scripts/ReferencerClass.cpp
        scripts/ReferencerClass.h
        scripts/RefineryGameObj.h
        scripts/RefineryGameObjDef.h
        scripts/renalert.cpp
        scripts/renalert.h
        scripts/renalert2.cpp
        scripts/renalert2.h
        scripts/RenderObjClass.h
        scripts/RepairBayGameObj.h
        scripts/RepairBayGameObjDef.h
        scripts/SamSiteGameObj.h
        scripts/SamSiteGameObjDef.h
        scripts/SaveLoadSubSystemClass.h
        scripts/SaveLoadSystemClass.h
        scripts/SCAnnouncement.h
        scripts/SceneClass.h
        scripts/ScriptableGameObj.h
        scripts/ScriptableGameObjDef.h
        scripts/scriptfactory.cpp
        scripts/scriptregistrar.cpp
        scripts/scripts.cpp
        scripts/scripts.h
        scripts/ScriptZoneGameObj.h
        scripts/ScriptZoneGameObjDef.h
        scripts/scud.cpp
        scripts/scud.h
        scripts/sh_blocker.cpp
        scripts/sh_factory.cpp
        scripts/sh_underground.cpp
        scripts/shawk.cpp
        scripts/shawk.h
        scripts/SimpleDefinitionFactoryClass.h
        scripts/SimpleFileFactoryClass.cpp
        scripts/SimpleFileFactoryClass.h
        scripts/SimpleGameObj.h
        scripts/SimpleGameObjDef.h
        scripts/SimplePersistFactoryClass.h
        scripts/Singleton.h
        scripts/SList.h
        scripts/SmartGameObj.h
        scripts/SmartGameObjDef.h
        scripts/SoldierFactoryGameObj.h
        scripts/SoldierFactoryGameObjDef.h
        scripts/SoldierGameObj.h
        scripts/SoldierGameObjDef.h
        scripts/Sound3DClass.h
        scripts/SoundBufferClass.h
        scripts/SoundSceneObjClass.h
        scripts/SpecialEffectsGameObj.h
        scripts/SpecialEffectsGameObjDef.h
        scripts/SphereClass.h
        scripts/Standard.h
        scripts/StaticAnimPhysClass.h
        scripts/StaticAnimPhysDefClass.h
        scripts/StaticPhysClass.h
        scripts/StaticPhysDefClass.h
        scripts/StealthEffectClass.h
        scripts/straw.cpp
        scripts/straw.h
        scripts/SuperweaponGameObj.h
        scripts/SuperweaponGameObjDef.h
        scripts/survival.cpp
        scripts/survival.h
        scripts/SysTimeClass.cpp
        scripts/SysTimeClass.h
        scripts/tda.cpp
        scripts/tda.h
        scripts/TDBCategoryClass.cpp
        scripts/TDBCategoryClass.h
        scripts/TDBObjClass.cpp
        scripts/TDBObjClass.h
        scripts/TeamPurchaseSettingsDefClass.h
        scripts/tfx.cpp
        scripts/tfx.h
        scripts/ThreadClass.cpp
        scripts/ThreadClass.h
        scripts/TransitionGameObj.h
        scripts/TransitionGameObjDef.h
        scripts/TransitionInstanceClass.h
        scripts/TranslateDBClass.cpp
        scripts/TranslateDBClass.h
        scripts/TwiddlerClass.cpp
        scripts/TwiddlerClass.h
        scripts/Types.h
        scripts/UndergroundEffectClass.h
        scripts/unstoppable.cpp
        scripts/unstoppable.h
        scripts/vector2.h
        scripts/Vector3.h
        scripts/Vector3i.h
        scripts/vector4.h
        scripts/VehicleFactoryGameObj.h
        scripts/VehicleFactoryGameObjDef.h
        scripts/VehicleGameObj.h
        scripts/VehicleGameObjDef.h
        scripts/VisTableClass.h
        scripts/VisTableMgrClass.h
        scripts/w3d.h
        scripts/WarFactoryGameObj.h
        scripts/WarFactoryGameObjDef.h
        scripts/WeaponBagClass.h
        scripts/WeaponClass.h
        scripts/WeaponManager.cpp
        scripts/WeaponManager.h
        scripts/weaponmgr.h
        scripts/WidgetUserClass.h
        scripts/WWAudioClass.h
        scripts/wwmath.cpp
        scripts/wwmath.h
        scripts/xpert.cpp
        scripts/xpert.h
        shared/General.cpp
        shared/General.h
        shared/shared.cpp)
